# DriversDict

./: .gitignore  README.md  pyproject.toml  setup.py
driverdict/resource/: dictionary.txt
driversdict/: __init__.py  cli.py  install.py  resource.py  testing.py
driversdict/database/: exchange.py  model.py
driversdict/tests/: test_database.py
resource/: dictionary.txt
