[tool.poetry]
name = "driversdict"
version = "0.2.1"
description = "查询、测试、记录「某些压缩包」的解压密码"
authors = ["zombie110year <zombie110year@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
driversdict = "driversdict.cli:cli_main"
